--- a/src/assets/scss/category.scss
+++ b/src/assets/scss/category.scss
@@ -375,6 +375,23 @@
   }
 }
 
+.type-tag {
+  // justify-content: center;
+  align-items: center;
+  display: flex;
+  .type-checkbox {
+    display: flex;
+    align-items: center;
+  }
+  input {
+    cursor: pointer;
+  }
+  label {
+    cursor: pointer;
+    font-size: 12px;
+  }
+}
+
 .tags-input {
   width: 100%;
   margin: 10px;
@@ -382,13 +399,14 @@
     width: 100%;
     border: solid 2px #673de6;
     border-radius: 2px;
-    padding: 10px;
+    margin-bottom: 5px;
     display: flex;
     align-items: center;
     .tag {
       margin: 0 5px 0 5px;
       padding: 0 8px 0 8px;
       font-size: 10px;
+      font-weight: 700;
       color: #ffffff;
       display: flex;
       border-radius: 3px;
