--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -200,6 +200,11 @@ input {
   }
 }
 
+.material-icons {
+  display: inline-flex;
+  vertical-align: top;
+}
+
 @media (max-width: 767px) {
   body {
     overflow-x: hidden;
