--- a/src/assets/scss/category.scss
+++ b/src/assets/scss/category.scss
@@ -277,6 +277,7 @@
     cursor: pointer;
   }
   p {
+    cursor: pointer;
     font-size: 11px;
     font-weight: 700;
     margin-bottom: 0px;
@@ -338,7 +339,7 @@
   .add-form {
     border: none;
     padding: 15px;
-    position: fixed;
+    position: relative;
     box-shadow: 0 3px 6px 0px #673de6;
     height: auto;
     border-radius: 5px;
@@ -381,7 +382,6 @@
   display: flex;
   .type-checkbox {
     display: flex;
-    align-items: center;
   }
   input {
     cursor: pointer;
