--- a/src/assets/scss/header.scss
+++ b/src/assets/scss/header.scss
@@ -44,11 +44,17 @@
       background-color: whitesmoke;
     }
     .dropdown-menu {
+      h2 {
+        font-size: 24px;
+      }
+      a {
+        text-decoration: none;
+      }
       margin-top: 20px;
       border: solid 2px #30006d;
       border-radius: 5px;
-      width: 600px;
-      height: 300px;
+      width: 800px;
+      height: auto;
     }
   }
   .right-section {
