create our story page and add testimonial work in progress

--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -12,6 +12,9 @@
   .logo-section {
     border-left: solid 6px #b89ddb;
   }
+  a {
+    text-decoration: none;
+  }
 }
 
 // Footer Nav BAr ---------------------------
