--- a/src/assets/scss/landing_page.scss
+++ b/src/assets/scss/landing_page.scss
@@ -1,8 +1,9 @@
-.carousel-control-prev,
-.carousel-control-next {
-  position: relative;
+.landing-carousel {
+  .carousel-control-prev,
+  .carousel-control-next {
+    position: relative;
+  }
 }
-
 .carousel-card {
   height: 500px;
   width: auto;
