handle design and add moment package

--- a/src/assets/scss/landing_page.scss
+++ b/src/assets/scss/landing_page.scss
@@ -8,8 +8,9 @@
   height: 500px;
   width: auto;
   background: rgb(48, 0, 182);
+  background: rgb(48, 0, 182);
   background: linear-gradient(
-    81deg,
+    180deg,
     rgba(48, 0, 182, 1) 11%,
     rgba(48, 0, 182, 1) 35%,
     rgba(79, 34, 209, 1) 57%,
