--- a/src/assets/scss/tutorial.scss
+++ b/src/assets/scss/tutorial.scss
@@ -79,7 +79,6 @@
   }
 
   .tech-tag {
-    justify-content: center;
     align-items: center;
     background-color: #c7bdd4;
     border-radius: 7px;
@@ -199,6 +198,7 @@
   }
   box-shadow: 0 7px 4px 0px rgba(0, 0, 0, 0.09);
   height: auto;
+  width: 100%;
   border-radius: 5px;
   border: none;
   padding: 10px 0 10px 0;
@@ -257,6 +257,10 @@
     height: auto;
     border-radius: 10px;
     align-items: center;
+    span {
+      font-size: 10px;
+      color: rgb(124, 123, 123);
+    }
   }
 }
 
@@ -334,6 +338,10 @@
   align-items: center;
   width: 600px;
   margin: 0 auto;
+  span {
+    font-size: 10px;
+    color: rgb(124, 123, 123);
+  }
 }
 
 .add-totorial {
@@ -341,7 +349,7 @@
     border: none;
     padding: 15px;
     position: relative;
-    box-shadow: 0 3px 6px 0px #673de6;
+    box-shadow: 0 7px 10px 5px rgba(0, 0, 0, 0.09);
     height: auto;
     border-radius: 5px;
   }
